# sandbox

./: BUILD.gn
antialiasing/: BUILD.gn
antialiasing/csaa/: BUILD.gn  diffuse.afx  main.cc
base/: BUILD.gn  base.h  camera_control.cc  envmap.cc  envmap.h  mesh.cc  skydome.afx  wxsampleapp.cc  wxsampleapp.h  wxsampleframe.cc  wxsampleframe.h
base/afx/: light.afxi
base/nvidia/lib/: nv_math.dbg.lib  nv_math.opt.lib  nv_nvb.dbg.lib  nv_nvb.opt.lib
base/nvidia/nv_math/: nv_algebra.h
base/sampleapp/: BUILD.gn  main.cc
basic/: BUILD.gn
basic/cubemap/: BUILD.gn  diffuse.afx  main.cc
basic/mesh/: BUILD.gn  diffuse.afx  main.cc
basic/sampleapp/: BUILD.gn  main.cc  sample1.cc  sample2.cc
basic/triangle/: BUILD.gn  main.cc
effect/: BUILD.gn
effect/bump_earth/: BUILD.gn
effect/dispersion/: BUILD.gn  README  diffuse.afx  dispersion.afx  main.cc  mesh.cc  mesh.h
effect/simple_light/: BUILD.gn  diffuse.afx  main.cc
shadow/softshadows/: README
water/: BUILD.gn
water/vertex_fetch_water/: BUILD.gn  quad.afx  simulation.cc  simulation.h  simulation_main.cc  water_perturb.afx  water_simulation.afx
