import("//build/templates/afx.gni")

static_library("sandbox_loader") {
  sources = ["mesh.cc", "mesh.h"]
  deps = [
    "//third_party/assimp:assimp",
    "//azer/util:azer_util",
    "//azer:azer",
  ]
}

static_library("sandbox_wxapp") {
  sources = [
    "wxsampleapp.cc",
    "wxsampleapp.h",
    "wxsampleframe.cc",
    "wxsampleframe.h"
  ]
  deps = [
    "//third_party/wxwidget:wxwidget"
    "//azer/render:render",
  ]
}

afx("sandbox_base_skydome_effect") {
  source = "skydome.afx"
  filename = "skydome"
}

static_library("sandbox_base") {
  sources = [
    "dummy.cc",
    "camera_control.cc",
    "camera_control.h",
    "envmap.cc",
    "envmap.h",
  ]
  deps = [
    ":sandbox_loader",
    ":sandbox_wxapp",
    ":sandbox_base_skydome_effect",
    "//third_party/wxwidget:wxwidget"
  ]
}