import("//build/templates/afx.gni")

afx("sandbox_basic_mesh_effect") {
  source = "diffuse.afx"
  filename = "diffuse"
}
executable("sandbox_basic_mesh") {
  sources = ["main.cc"]
  deps = [
    "//third_party/wxwidget:wxwidget"
    "//sandbox/base:sandbox_base",
    "//base:appinit",
    ":sandbox_basic_mesh_effect",
  ]
}